php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #24883 variables_order won't work as expected
Submitted: 2003-07-31 08:47 UTC Modified: 2003-07-31 18:00 UTC
From: seba at iq dot pl Assigned: iliaa (profile)
Status: Closed Package: Variables related
PHP Version: 4.3.3RC2 OS: rh9
Private report: No CVE-ID: None
 [2003-07-31 08:47 UTC] seba at iq dot pl
Description:
------------
; Registration is done from left to right, newer 
; values override older values. 
 
variables_order = "EGPCS"       
register_globals = On      
 

Reproduce code:
---------------
start page - x.html:   
<form action='x.php?asd=xxx' method='post'>   
<input name='asd' type='text' value='yyy'>   
<input name='' type='submit' >   
</form>   
   
x.php:    
<? echo $asd; ?>

Expected result:
----------------
should be 'yyy' 

Actual result:
--------------
result is 'xxx' 

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2003-07-31 18:00 UTC] iliaa@php.net
This bug has been fixed in CVS.

In case this was a PHP problem, snapshots of the sources are packaged
every three hours; this change will be in the next snapshot. You can
grab the snapshot at http://snaps.php.net/.
 
In case this was a documentation problem, the fix will show up soon at
http://www.php.net/manual/.

In case this was a PHP.net website problem, the change will show
up on the PHP.net site and on the mirror sites in short time.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Wed Sep 30 05:00:02 2026 UTC