Fixed bug #24883 (variables created through register_globals, ignore gpc_order and variables_order). Prevent multiple registration of ENV & SERVER variables when more then one is specified. Prevent multiple addition of GET/POST/COOKIE variables when building _REQUEST.